INQ-42 Added name/code validation and other fixes
This fixes several issues where new data type fields were not being
properly categorized. It also adds name/code validation for data
types and fields. The system will prevent saving if:
a) A name field is too short (defined at 2-characters right now)
b) A name field or code already exists in the system

The validator also parses the name to automatically generate the
code, stripping any non-word characters ([a-zA-Z0-9_]) and replacing
spaces with underscores.

Finally this also improved the saving process for new data types
and fields.

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -499,6 +499,16 @@ a{
 	  max-width: 700px !important;
   }
 
+  .form-control-feedback{
+	  font-size: 14px;
+  }
+
+  .push-left{
+	  position: absolute;
+	  left: 15px;
+	  bottom: 15px;
+  }
+
   /* Upload Schema Screen */
 
   .teaser-container .progress{
